<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.AppCompat.NoActionBar"
    android:background="@drawable/ic_splash_screen"
    tools:context=".SplashScreenActivity">


    <TextView
        android:id="@+id/head1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="@string/your"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slogan" />

    <TextView
        android:id="@+id/head2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:textSize="35sp"
        android:gravity="center"
        android:fontFamily="@font/aclonica"
        android:text="@string/home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head1" />

    <TextView
        android:id="@+id/head3"
        android:layout_width="0dp"
        android:fontFamily="@font/aclonica"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/screen"
        android:textAllCaps="true"
        android:textSize="35sp"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head2" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/script_mt"
        android:text="@string/copr."
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/script_mt"
        android:gravity="center"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--
        <TextView
            android:id="@+id/slogan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="209dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/slogan"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerTitle" />
    -->
</androidx.constraintlayout.widget.ConstraintLayout>